- pom.xml     加入 org.apache.commons commons-text
- src/main/java/cpe_client/cpecrawler/test_data.java
    public static String getAcceptCode(String problemId){
        /*
            回傳 AC code
            args:
                (String) problemId-> 題號 ex "12908"
            return value:
                (string) -> AC code in c++ ex. "//uva12908\n#include <algorithm>\n#include <iostream>\n#include <vector>\n\nusing namespace std;\n\nint main() {\n    int input = 0;\n    vector<int> table;\n\n    for (int i = 0; i <= 20000; i++) {\n        table.push_back((i * (i + 1)) / 2);\n    }\n\n    while (cin >> input && input) {\n        vector<int>::iterator itTable = upper_bound(table.begin(), table.end(), input);\n        cout << *itTable - input << " " << itTable - table.begin() << endl;\n    }\n\n    return 0;\n}"
         */

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>selenium-chrome-driver</artifactId>
             <version>4.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
